--- a/gestioneRistoranti/src/main/resources/application.properties
+++ b/gestioneRistoranti/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gestioneRistoranti
 spring.datasource.url=jdbc:mysql://localhost:3306/gestione_ristoranti
 spring.datasource.username=root
-spring.datasource.password=sl._N2aScXw3i
+spring.datasource.password=Forzalazio2!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
